Deleted unnecessary vicnode form files and removed the hardcode in vicnode form
Change-Id: I33d037c89595b07885e1874ec0ac8e0a930acadf

--- a/app/templates/new_allocation.html
+++ b/app/templates/new_allocation.html
@@ -4,11 +4,9 @@
             <a href="#/allocations/nectar_request">
                 <input class="btn btn-default" type="button" value="New NeCTAR Allocation">
             </a>
-            <!--
-            <a href="#/allocations/vicnode_request">
-                <input class="btn btn-default" type="button" value="New VicNode Allocation">
-            </a>
-            -->
+            <!--<a href="#/allocations/vn_request">-->
+                <!--<input class="btn btn-default" type="button" value="New VicNode Allocation">-->
+            <!--</a>-->
         </div>
     </div>
 </div>
