Make the login page look a bit nicer
Change-Id: I037bbabf4d8068ffdd7b29a965992f5ab4e10f4a

--- a/app/templates/show_aaf_login.html
+++ b/app/templates/show_aaf_login.html
@@ -1,8 +1,6 @@
-<div ng-include="'templates/site_header.html'"></div>
 <div class="main-container">
-    <div ng-controller="NavController" ng-include="'templates/nav_title_bar.html'" ng-class="{ active: isCurrentPath('/login') }"></div>
     <div style="clear:both"></div>
-    <div class="display-body">
+    <div>
         <div ng-include="'templates/error_display.html'"></div>
         <br/>
         <br/>
