Moved the token from the url after login success and changed the project identifer display order in the page
Change-Id: I253336ee943537c3ebc3fef2c87d7b9cea384d2b

--- a/app/templates/request_detail.html
+++ b/app/templates/request_detail.html
@@ -24,8 +24,8 @@
             </div>
             <table class="data_tab">
                 <tr ng-repeat="projid in vm.alloc_project_request.project_ids">
-                    <th width="50%">{{ projid.identifier }}</th>
-                    <td width="50%">{{ projid.system.system }}</td>
+                    <th width="50%">{{ projid.system.system }}</th>
+                    <td width="50%">{{ projid.identifier }}</td>
                 </tr>
             </table>
         </div>
