Don't display internal request code to users
Change-Id: I035f2e0b538650a9b38d06151ec28fb6247ac8c1

--- a/app/templates/allocations.html
+++ b/app/templates/allocations.html
@@ -17,7 +17,7 @@
             <tbody>
             <tr ng-repeat="nc_req in project.requests">
                 <td width="20%">
-                    {{nc_req.request_status.status}} [{{nc_req.request_status.code}}]
+                    {{nc_req.request_status.status}}
                     <provision-details projectid="{{ project.id }}" project="project"></provision-details>
                 </td>
                 <td>
