--- a/app/templates/allocations_history.html
+++ b/app/templates/allocations_history.html
@@ -13,7 +13,7 @@
             <tbody>
             <tr ng-repeat="nc_req in vm.history_list">
                 <td>
-                    {{nc_req.request_status.status}} [{{nc_req.request_status.code}}]
+                    {{nc_req.request_status.status}}
                 </td>
                 <td>
                     {{nc_req.project.title}}
