Don't display internal request code to users
Change-Id: I035f2e0b538650a9b38d06151ec28fb6247ac8c1

--- a/app/templates/request_detail.html
+++ b/app/templates/request_detail.html
@@ -117,7 +117,7 @@
 <div class="row" ng-repeat="req in vm.alloc_project_request.requests">
     <div class="col-md-12">
         <div class="sub_title">
-            Request Id: {{req.id}} [ {{req.request_status.status}} ( {{req.request_status.code}} ) ]
+            Request Id: {{req.id}} [ {{req.request_status.status}} ]
         </div>
     </div>
     <div class="col-md-12">
