--- a/app/templates/request_detail.html
+++ b/app/templates/request_detail.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="m_title">
-            <i class="fa fa-folder-open"></i> {{vm.alloc_project_request.title}}
+            Poject Name: {{vm.alloc_project_request.title}}
         </div>
     </div>
     <div class="blank_separator"></div>
@@ -34,12 +34,12 @@
 
     <div class="col-md-12">
         <div class="sub_title">
-            <span class="sub_title"><i class="fa fa-paper-plane-o"></i> For Code</span>
+            <span class="sub_title"><i class="fa fa-paper-plane-o"></i> FOR Code</span>
         </div>
         <table class="data_tab">
             <thead>
             <tr>
-                <th width="30%">For Code</th>
+                <th width="30%">FOR Code</th>
                 <th width="30%">Description</th>
                 <th width="40%">Percentage</th>
             </tr>
