--- a/app/templates/site_footer.html
+++ b/app/templates/site_footer.html
@@ -2,9 +2,7 @@
     <div class="container">
         <p>NeCTAR Cloud</p>
         <p>Copyright © 2016 NeCTAR. All Rights Reserved</p>
-        <p></p>
-        <ul class="footer-links">
-            <li><a href="#terms_condtions">Terms and Conditions</a></li>
-        </ul>
+        <br/>
+        <a href="#terms_condtions">Terms and Conditions</a>
     </div>
 </footer>
