--- a/app/templates/allocations.html
+++ b/app/templates/allocations.html
@@ -1,22 +1,23 @@
 
-<div class="row" ng-repeat="project in vm.nc_projects  track by $index">
-    <div class="col-md-12">
-        <div class="m_title">{{project.title}}</div>
-    </div>
+<div class="row">
     <div class="col-md-12">
         <table class="display_data_tab">
             <thead>
-            <tr>
-                <th width="20%">Status</th>
+              <tr>
+                <th width="10%">Name</th>
+                <th width="10%">Status</th>
                 <th width="30%">Resources</th>
                 <th width="10%">Expiry</th>
                 <th width="20%">Funding</th>
                 <th width="20%">Actions</th>
             </tr>
             </thead>
-            <tbody>
-            <tr ng-repeat="nc_req in project.requests">
-                <td width="20%">
+            <tbody ng-repeat="project in vm.nc_projects  track by $index">
+              <tr ng-repeat="nc_req in project.requests">
+                <td width="10%">
+                  <a href="#/{{ nav.first_path }}/view_request/{{nc_req.id}}">{{project.title}}</a>
+                </td>
+                <td width="10%">
                     {{nc_req.request_status.status}}
                     <provision-details projectid="{{ project.id }}" project="project"></provision-details>
                 </td>
@@ -40,7 +41,6 @@
                     {{nc_req.funding_scheme.funding_scheme}}
                 </td>
                 <td>
-                    <a href="#/{{ nav.first_path }}/view_request/{{nc_req.id}}">View</a> |
                     <span ng-if="nc_req.request_status.code =='E' || nc_req.request_status.code =='N'">
                         <span ng-if="nc_req.funding_scheme.funding_scheme.indexOf('NeCTAR') > -1">
                             <a href="#/{{ nav.first_path }}/edit_request/{{nc_req.project}}/{{nc_req.id}}">Edit</a> |
