--- a/app/templates/project_form.html
+++ b/app/templates/project_form.html
@@ -10,7 +10,7 @@
             </modal>
         </span>
 
-        <div class="form-group" ng-class="{'has-error': vm.project_ids_identifier_invalid}">
+        <div class="form-group" ng-class="{'has-error': vm.project_ids_identifier_invalid || vm.project_ids_identifier_start_pt_invalid}">
             <input type="text" name="project_identifier" id="id-project_project_ids_0_identifier" class="form-control"
                    ng-model="vm.alloc.project_ids[0].identifier" ng-readonly="vm.readyOnlyField"
                    ng-pattern="/^[a-zA-Z][-_a-zA-Z0-9]{1,31}$/"required maxlength="32"/>
@@ -18,6 +18,9 @@
                    value="{{vm.alloc.project_ids[0].system}}"/>
             <span class="help-block" ng-show="vm.project_ids_identifier_invalid">
                 Invalid project identifier. (Letters, numbers, underscores and hyphens only. Must start with a letter and be less than 32 characters)
+            </span>
+            <span class="help-block" ng-show="vm.project_ids_identifier_start_pt_invalid">
+                Invalid project identifier. (Project names cannot start with 'pt-')
             </span>
         </div>
     </div>
