--- a/app/templates/approval_nav.html
+++ b/app/templates/approval_nav.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="span7 center">
-        <div class="col-md-2 col-md-offset-4">
+        <div class="col-md-3 c-offset-4">
             <label>
                 Selected Funding Body:
             </label>
@@ -13,7 +13,7 @@
 </div>
 <br/>
 <div class="center_div">
-    <div class="col-md6 col-md-offset-3">
+    <div class="c-offset-3">
         <div class="quick-btn" ng-class="{'active': vm.isAwa}" ng-click="vm.isActive('awa')">
             <i class="fa fa-check-square-o fa-2x"></i>
             <span>Applications waiting approval</span>
